# raki-vs-nextjs

./: .gitignore  AGENTS.md  README.md  docker-compose.yml
app/next-hello/: instrumentation.ts  package-lock.json  package.json
app/next-hello/app/: layout.tsx  page.tsx
app/rari-hello/: index.html  package.json  vite.config.ts
app/rari-hello/public/: data.json
docs/: article.md
docs/superpowers/plans/: 2026-05-30-rari-vs-nextjs-benchmark-implementation.md  (+2 more)
nextjs/: .gitignore  .prettierignore  AGENTS.md  Cargo.toml  Dockerfile  eslint.config.mjs  lerna.json  package.json  pnpm-lock.yaml
nextjs/.github/: AGENTS.md  next-stats-action.Dockerfile  package.json  pnpm-lock.yaml
nextjs/errors/: import-esm-externals.mdx  middleware-upgrade-guide.mdx  next-prerender-sync-params.mdx  next-prerender-sync-request.mdx  swc-disabled.mdx  unrendered-instant-segment.mdx
nextjs/patches/: playwright-core@1.58.2.patch
nextjs/scripts/: check-backport-canary-release.js  check-unused-turbo-tasks.mjs  create-preview-tarballs.js  create-release-branch.js  generate-release-log.mjs  get-changed-tests.mjs  git-info.mjs  normalize-version-bump.js  patch-preview-tarball.mjs  pr-ci-comment.mjs  pr-logs.js  publish-release.js  release-stats.sh  run-for-change.mjs  rust-fingerprint.js  set-preview-version.js  start-release.js
nextjs/turbopack/crates/turbo-rcstr-macros/: Cargo.toml
rari/: Cargo.toml  Dockerfile  pnpm-workspace.yaml  rust-toolchain.toml
wrk/: Dockerfile  capture-stats.sh  fetch-profile.js  run-benchmark.sh  saturation.sh  stream-profile.js  verify-payload.js
(+382 files in other folders)
